@@ -1,5 +1,5 @@
 module ActiveHash
   module Gem
-    VERSION = "0.9.13"
+    VERSION = "0.9.14"
   end
 end
